# medical-records

./: .gitignore  pyproject.toml
medical_records/: apps.py
medical_records/management/commands/: create_patient.py
medical_records/migrations/: 0001_initial.py
